<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#111"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:windowActionBar="false"
    tools:context="co.mide.boilermake.Info" >

	<TextView android:text="@string/infoInstruction"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:textColor="#ccc"
	    android:gravity="center"
	    android:textSize="19sp"
	    android:padding="10dp"/>

	    <TextView android:id="@+id/drinkInfo"
	    	android:textColor="#ccc"
	        android:textSize="15sp"
	        android:text="@string/drinkInfo"
	        android:layout_height="wrap_content"
    		android:gravity="center"
	        android:padding="10dp"
	        android:layout_marginTop="40dp"
	        android:layout_width="wrap_content"/>
	    <EditText
	        android:id="@+id/drinkInfoNum"
	        android:inputType="number"
	        android:textColor="#667"
	        android:maxLength="2"
	        android:hint="@string/zero"
			android:gravity="bottom|center_horizontal"
		    android:layout_height="70dp"
	        android:textSize="25sp"
		    android:layout_width="80dp"/>
       <TextView
            android:id="@+id/sleepInfo"
            android:layout_width="wrap_content"
	    	android:textColor="#ccc"
	   		android:gravity="center"
            android:layout_height="wrap_content"
	        android:textSize="15sp"
            android:padding="10dp"
            android:text="@string/sleepInfo" />

       <EditText
           android:id="@+id/sleepInfoNum"
           android:layout_width="80dp"
           android:layout_height="70dp"
           android:ems="10"
           android:gravity="bottom|center_horizontal"
           android:inputType="number"
           android:maxLength="2"
	        android:hint="@string/zero"
           android:textColor="#667"
           android:textSize="25sp" >

           <requestFocus />
       </EditText>

 		<TextView android:id="@+id/codoInfo"
	        android:text="@string/codoInfo"
	        android:textSize="15sp"
	    	android:textColor="#ccc"
		    android:gravity="center"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:layout_width="wrap_content"/>
		<EditText android:id="@+id/codoInfoNum"
	        android:inputType="number"
	        android:maxLength="2"
	        
	        android:hint="@string/zero"
	        android:textColor="#667"
			android:gravity="bottom|center_horizontal"
	        android:textSize="25sp"
		    android:layout_height="70dp"
		    android:layout_width="80dp"/>
		<Button android:id="@+id/saveB"
		    android:text="@string/save"
		    android:enabled="false"
		    android:layout_gravity="end"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
</LinearLayout>
