<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
        android:clipChildren="false"
   		android:clipToPadding="false"
    tools:context="co.mide.boilermake.Badge" >
    <LinearLayout
        android:clipChildren="false"
   		android:clipToPadding="false"
	        android:orientation="vertical"
	        android:layout_width="match_parent"
	        android:gravity="center"
	        android:layout_height="wrap_content">

    	<RelativeLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center_horizontal"
    	    android:clipChildren="false"
    	    android:clipToPadding="false" >

			<ImageView android:id="@+id/background"
			    android:layout_width="match_parent"
			    android:layout_margin="0dp"
			    android:padding="0dp"
			    android:contentDescription="@string/backgroundDes"
			    android:layout_height="wrap_content"
			    android:scaleType="centerInside"
			    android:src="@drawable/background">
			</ImageView>
			<ImageButton 
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick1"
			    android:layout_marginTop="20dp"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick2"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="20dp"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick3"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="20dp"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
        android:clipChildren="false"
			    android:layout_marginTop="20dp"
   		android:clipToPadding="false"
			    android:id="@+id/tick4"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
			    
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick5"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="20dp"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
	    <ImageButton 
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick6"
			    android:layout_marginTop="20dp"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick7"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="20dp"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick8"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="20dp"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
        android:clipChildren="false"
			    android:layout_marginTop="20dp"
   		android:clipToPadding="false"
			    android:id="@+id/tick9"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
			    
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick10"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="20dp"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick11"
			    android:layout_marginTop="20dp"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick12"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="20dp"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
        android:clipChildren="false"
   		android:clipToPadding="false"
			    android:id="@+id/tick13"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="20dp"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
			<ImageButton 
        android:clipChildren="false"
			    android:layout_marginTop="20dp"
   		android:clipToPadding="false"
			    android:id="@+id/tick14"
			    android:layout_centerHorizontal="true"
			    android:layout_alignParentTop="true"
			    android:contentDescription="@string/empty"
			    android:layout_width="5dp"
			    android:layout_height="15dp"
			    android:background="#555"/>
    	</RelativeLayout>
		<TextView android:id="@+id/lifeDisplay"
		    android:clickable="true"
		    android:layout_marginTop="40dp"
		    android:onClick="textClick"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="70sp"
		    android:textColor="#eee"
		    android:text="@string/defaultPercent"/>
	</LinearLayout>
</RelativeLayout>
